FrontMatter内のショートコードをコンポーネント風文字列に置き換え

--- a/kintone-help-astro-poc/src/pages/ja/admin/audit_logs/audit_logs.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/admin/audit_logs/audit_logs.mdx
@@ -1,7 +1,7 @@
 ---
-title: "{{< kintone >}}の監査ログの確認方法"
+title: "<Kintone />の監査ログの確認方法"
 weight: 100
-description: "{{< kintone >}}の監査ログの確認方法を説明しています。"
+description: "<Kintone />の監査ログの確認方法を説明しています。"
 aliases:
   - "/ja/id/04054"
 layout: "@/layouts/PageLayout.astro"
