--- a/kintone-help-astro-poc/src/pages/ja/admin/audit_logs/index.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/admin/audit_logs/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "監査ログ"
 weight: 700
-description: "{{< kintone >}}が出力する監査ログについて説明します。"
+description: "<Kintone />が出力する監査ログについて説明します。"
 aliases:
   - "/ja/id/040809"
 layout: "@/layouts/SectionLayout.astro"
