--- a/kintone-help-astro-poc/src/pages/ja/admin/manage_system/index.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/admin/manage_system/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "{{< kintone >}}システム管理／{{< slash_ui >}}の開きかた"
+title: "<Kintone />システム管理／<SlashUi />の開きかた"
 weight: 100
 aliases:
   - "/ja/id/04045"
