--- a/kintone-help-astro-poc/src/pages/ja/admin/permission_admin/index.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/admin/permission_admin/index.mdx
@@ -3,7 +3,7 @@ title: "権限の管理"
 weight: 200
 aliases:
   - "/ja/id/04057"
-description: "{{< kintone >}}の権限の種類について、概要を説明しています。"
+description: "<Kintone />の権限の種類について、概要を説明しています。"
 layout: "@/layouts/SectionLayout.astro"
 ---
 
