--- a/kintone-help-astro-poc/src/pages/ja/admin/permission_admin/permissions/index.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/admin/permission_admin/permissions/index.mdx
@@ -1,7 +1,7 @@
 ---
-title: "{{< kintone >}}システム管理で設定できるアクセス権"
+title: "<Kintone />システム管理で設定できるアクセス権"
 weight: 300
-decription: "［{{< kintone >}}システム管理］画面の［アクセス権］で設定できるアクセス権と、設定手順について説明します。"
+decription: "［<Kintone />システム管理］画面の［アクセス権］で設定できるアクセス権と、設定手順について説明します。"
 aliases:
   - "/ja/id/04062"
 layout: "@/layouts/SectionLayout.astro"
