--- a/kintone-help-astro-poc/src/pages/ja/admin/user_monitoring.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/admin/user_monitoring.mdx
@@ -3,7 +3,7 @@ title: "ユーザーのアクセス状況の確認"
 weight: 800
 aliases:
   - "/ja/id/040782"
-description: "［ユーザーのアクセス状況］画面で、{{< kintone >}}へのアクセス状況をユーザーごとに確認する方法について説明しています。"
+description: "［ユーザーのアクセス状況］画面で、<Kintone />へのアクセス状況をユーザーごとに確認する方法について説明しています。"
 layout: "@/layouts/PageLayout.astro"
 ---
 
