--- a/kintone-help-astro-poc/src/pages/ja/app/customize/javascript_fullcustomize.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/customize/javascript_fullcustomize.mdx
@@ -1,5 +1,5 @@
 ---
-title: "JavaScriptやCSSを使用した{{< kintone >}}全体のカスタマイズ"
+title: "JavaScriptやCSSを使用した<Kintone />全体のカスタマイズ"
 weight: 100
 aliases:
   - "/ja/id/04042"
