--- a/kintone-help-astro-poc/src/pages/ja/app/plugin/manage/plugin.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/plugin/manage/plugin.mdx
@@ -1,9 +1,9 @@
 ---
-title: "プラグインを追加／削除する（{{< kintone >}}システム管理）"
+title: "プラグインを追加／削除する（<Kintone />システム管理）"
 weight: 100
 aliases:
   - "/ja/id/0408"
-description: "{{< kintone >}}システム管理にプラグインを追加する方法と、削除する方法を説明しています。"
+description: "<Kintone />システム管理にプラグインを追加する方法と、削除する方法を説明しています。"
 layout: "@/layouts/PageLayout.astro"
 ---
 
