--- a/kintone-help-astro-poc/src/pages/ja/app/set_webhook/webhook_notification.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/set_webhook/webhook_notification.mdx
@@ -1,5 +1,5 @@
 ---
-title: "{{< kintone >}}の操作で送信されるWebhookの通知内容"
+title: "<Kintone />の操作で送信されるWebhookの通知内容"
 weight: 400
 aliases:
   - "/ja/id/040602"
