--- a/kintone-help-astro-poc/src/pages/ja/app/setup/template/add_template.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/template/add_template.mdx
@@ -1,5 +1,5 @@
 ---
-title: "作成済みのアプリをテンプレート化して{{< kintone >}}に登録する"
+title: "作成済みのアプリをテンプレート化して<Kintone />に登録する"
 weight: 300
 aliases:
   - "/ja/id/04018"
