--- a/kintone-help-astro-poc/src/pages/ja/app/setup/template/edit_delete_template.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/template/edit_delete_template.mdx
@@ -1,5 +1,5 @@
 ---
-title: "{{< kintone >}}に登録されているアプリテンプレートを編集する／削除する"
+title: "<Kintone />に登録されているアプリテンプレートを編集する／削除する"
 weight: 600
 aliases:
   - "/ja/id/040783"
