--- a/kintone-help-astro-poc/src/pages/ja/app/setup/template/export_apptemplate.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/template/export_apptemplate.mdx
@@ -1,5 +1,5 @@
 ---
-title: "{{< kintone >}}に登録されているアプリテンプレートをファイルに書き出す"
+title: "<Kintone />に登録されているアプリテンプレートをファイルに書き出す"
 weight: 400
 aliases:
   - "/ja/id/04019"
