--- a/kintone-help-astro-poc/src/pages/ja/app/setup/template/import_template.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/template/import_template.mdx
@@ -1,9 +1,9 @@
 ---
-title: "{{< kintone >}}の外にあるアプリテンプレートを{{< kintone >}}に登録する"
+title: "<Kintone />の外にあるアプリテンプレートを<Kintone />に登録する"
 weight: 500
 aliases:
   - "/ja/id/04020"
-description: "{{< kintone >}}の外に保存されているアプリテンプレートファイルを読み込んで、{{< kintone >}}内に登録する方法を説明しています。"
+description: "<Kintone />の外に保存されているアプリテンプレートファイルを読み込んで、<Kintone />内に登録する方法を説明しています。"
 layout: "@/layouts/PageLayout.astro"
 ---
 
