--- a/kintone-help-astro-poc/src/pages/ja/guest/manage/exceed.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/guest/manage/exceed.mdx
@@ -1,5 +1,5 @@
 ---
-title: "{{< slash_ui >}}でGuest Account Licenseの必要数を確認する"
+title: "<SlashUi />でGuest Account Licenseの必要数を確認する"
 weight: 700
 disabled: "[JP,CN]"
 aliases:
