--- a/kintone-help-astro-poc/src/pages/ja/guest/operation/guestuser_linkaccount.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/guest/operation/guestuser_linkaccount.mdx
@@ -1,5 +1,5 @@
 ---
-title: "ゲストの操作：ゲストアカウントを{{< kintone >}}アカウントと共通化する"
+title: "ゲストの操作：ゲストアカウントを<Kintone />アカウントと共通化する"
 weight: 200
 aliases:
   - "/ja/id/040644"
