--- a/kintone-help-astro-poc/src/pages/ja/portal/manage/customize_portal.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/portal/manage/customize_portal.mdx
@@ -3,7 +3,7 @@ title: "ポータルの設定／変更"
 weight: 100
 aliases:
   - "/ja/id/04069"
-description: "ポータル（{{< kintone >}}のトップページ）の設定変更、およびカスタマイズについて説明しています。"
+description: "ポータル（<Kintone />のトップページ）の設定変更、およびカスタマイズについて説明しています。"
 layout: "@/layouts/PageLayout.astro"
 ---
 
