--- a/kintone-help-astro-poc/src/pages/ja/print_common_operation.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/print_common_operation.mdx
@@ -1,6 +1,6 @@
 ---
-title: "{{< kintone >}} ヘルプ"
-title2: "{{< kintone >}}共通の操作"
+title: "<Kintone /> ヘルプ"
+title2: "<Kintone />共通の操作"
 weight: 200
 type: "print_page"
 company: "サイボウズ株式会社"
