--- a/kintone-help-astro-poc/src/pages/ja/search/search_details.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/search/search_details.mdx
@@ -3,7 +3,7 @@ title: "データを検索する"
 weight: 100
 aliases:
   - "/ja/id/040689"
-description: "{{< kintone >}}の検索方法や検索結果画面の見かたについて説明しています。"
+description: "<Kintone />の検索方法や検索結果画面の見かたについて説明しています。"
 layout: "@/layouts/PageLayout.astro"
 ---
 
