--- a/kintone-help-astro-poc/src/pages/ja/space/manage_spacetemplate/edit_delete_spacetemplate.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/space/manage_spacetemplate/edit_delete_spacetemplate.mdx
@@ -1,5 +1,5 @@
 ---
-title: "{{< kintone >}}に登録されているスペーステンプレートを編集する／削除する"
+title: "<Kintone />に登録されているスペーステンプレートを編集する／削除する"
 weight: 300
 aliases:
   - "/ja/id/040785"
