--- a/kintone-help-astro-poc/src/pages/ja/space/space_admin/manage_spaces.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/space/space_admin/manage_spaces.mdx
@@ -3,7 +3,7 @@ title: "スペースを管理する"
 weight: 200
 aliases:
   - "/ja/id/04073"
-description: "{{< kintone >}}システム管理のスペース管理画面で、スペースの利用状況を確認する方法を説明しています。"
+description: "<Kintone />システム管理のスペース管理画面で、スペースの利用状況を確認する方法を説明しています。"
 layout: "@/layouts/PageLayout.astro"
 ---
 
