--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/app_qa/download_attached_files.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/app_qa/download_attached_files.mdx
@@ -1,5 +1,5 @@
 ---
-title: "{{< kintone >}}にアップロードした添付ファイルを一括でダウンロードすることは可能ですか？"
+title: "<Kintone />にアップロードした添付ファイルを一括でダウンロードすることは可能ですか？"
 weight: 5100
 aliases:
   - "/ja/id/040184"
