--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/login_error.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/login_error.mdx
@@ -1,5 +1,5 @@
 ---
-title: "{{< kintone >}}の操作時に「ログインしてください。」エラーが表示される"
+title: "<Kintone />の操作時に「ログインしてください。」エラーが表示される"
 weight: 300
 aliases:
   - "/ja/id/040307"
