--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/not_available_service.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/not_available_service.mdx
@@ -1,5 +1,5 @@
 ---
-title: "「サービスの利用権限がありません。」と表示されて{{< kintone >}}にアクセスできません"
+title: "「サービスの利用権限がありません。」と表示されて<Kintone />にアクセスできません"
 weight: 1900
 aliases:
   - "/ja/id/040309"
