--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/waiting_time.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/waiting_time.mdx
@@ -1,10 +1,10 @@
 ---
-title: "{{< kintone >}}の表示速度が遅い"
+title: "<Kintone />の表示速度が遅い"
 weight: 7500
 disabled: "[US]"
 aliases:
   - "/ja/id/040780"
-description: "{{< kintone >}}のページの表示が遅い場合に考えられる原因を説明します。"
+description: "<Kintone />のページの表示が遅い場合に考えられる原因を説明します。"
 layout: "@/layouts/PageLayout.astro"
 ---
 
