--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/guest/guest_unavailable.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/guest/guest_unavailable.mdx
@@ -1,5 +1,5 @@
 ---
-title: "ゲストユーザーには利用できない{{< kintone >}}の機能や操作を知りたい"
+title: "ゲストユーザーには利用できない<Kintone />の機能や操作を知りたい"
 weight: 2100
 aliases:
   - "/ja/id/040340"
