--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/guest/link_account_login.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/guest/link_account_login.mdx
@@ -1,5 +1,5 @@
 ---
-title: "アカウントの共通化をしていますが、{{< kintone >}}にログインできません"
+title: "アカウントの共通化をしていますが、<Kintone />にログインできません"
 weight: 1900
 aliases:
   - "/ja/id/040345"
