--- a/kintone-help-astro-poc/src/pages/ja/utility/admin_tips/assign_licenses_appropriately.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/utility/admin_tips/assign_licenses_appropriately.mdx
@@ -1,9 +1,9 @@
 ---
-title: "{{< kintone >}}の利用状況に応じて、ライセンスを付与するユーザーを見直したい"
+title: "<Kintone />の利用状況に応じて、ライセンスを付与するユーザーを見直したい"
 weght: 400
 aliases:
   - "/ja/id/040786"
-description: "各ユーザーの{{< kintone >}}の利用状況を把握し、ライセンスの要不要を判断する手順例を紹介します。"
+description: "各ユーザーの<Kintone />の利用状況を把握し、ライセンスの要不要を判断する手順例を紹介します。"
 layout: "@/layouts/PageLayout.astro"
 ---
 
