--- a/kintone-help-astro-poc/src/pages/ja/utility/app/calendar.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/utility/app/calendar.mdx
@@ -1,9 +1,9 @@
 ---
-title: "{{< kintone >}}でスケジュールを管理するには"
+title: "<Kintone />でスケジュールを管理するには"
 weight: 600
 aliases:
   - "/ja/id/040740"
-description: "{{< kintone >}}でスケジュール管理をする方法として、アプリのトップページをカレンダー形式で表示する方法を紹介しています。"
+description: "<Kintone />でスケジュール管理をする方法として、アプリのトップページをカレンダー形式で表示する方法を紹介しています。"
 layout: "@/layouts/PageLayout.astro"
 ---
 
