--- a/kintone-help-astro-poc/src/pages/ja/app/oauth/msflow.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/oauth/msflow.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Microsoft Power Automateと{{< kintone >}}を連携する"
+title: "Microsoft Power Automateと<Kintone />を連携する"
 weight: 100
 aliases:
   - "/ja/id/040677"
