--- a/kintone-help-astro-poc/src/pages/ja/mobile_access/smartphone/android/mobile_app_shortcut.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/mobile_access/smartphone/android/mobile_app_shortcut.mdx
@@ -1,7 +1,7 @@
 ---
-title: "{{< kintone >}}アプリのショートカットを追加する（Android）"
+title: "<Kintone />アプリのショートカットを追加する（Android）"
 weight: 500
-description: "Android端末のモバイルアプリで、よく使う{{< kintone >}}アプリのショートカットをモバイル端末のホーム画面に追加する手順を説明します。"
+description: "Android端末のモバイルアプリで、よく使う<Kintone />アプリのショートカットをモバイル端末のホーム画面に追加する手順を説明します。"
 aliases:
   - "/ja/id/040836"
 layout: "@/layouts/PageLayout.astro"
