ルートページのレイアウトを作成中

--- a/kintone-help-astro-poc/src/pages/ja/index.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/index.mdx
@@ -3,7 +3,7 @@ title: "<Kintone /> ヘルプ"
 weight: 0
 aliases:
   - "/ja/id/0401"
-layout: "@/layouts/SectionLayout.astro"
+layout: "@/layouts/RootLayout.astro"
 ---
 
   
